--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div align="center">
-        <a th:href="@{/barChart}">Bar-Chart</a>
+        <a th:href="@{/graph_bar/etnia}">Gráfico de barras</a>
     </div>
 </body>
 
