--- a/src/main/resources/templates/graph_bar.html
+++ b/src/main/resources/templates/graph_bar.html
@@ -5,22 +5,46 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" />
-</head>
-
-<body>
-    <div class="container">
-        <h2 align="center">Data Graph</h2>
-
-        <div id="container" style="width: 550px; height: 400px; margin: 0 auto"></div>
-    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" />
+</head>
+
+<body>
+    <div>
+        <form th:action="@{/graph_bar/filtrar}" method="post">
+            <select name="etnia-op" id="sexo-select">
+                <option value="">Selecione uma opção...</option>
+                <option th:each="etnia : ${etnias_options}" th:value="${etnia}"
+                    th:selected="${etnia==etnias_selecioanda}" th:text="${etnia}"></option>
+            </select>
+            <br>
+            <select name="sexo-op" id="sexo-select">
+                <option value="">Selecione uma opção...</option>
+                <option th:each="sexo : ${sexo_options}" th:value="${sexo}" th:text="${sexo}"
+                    th:selected="${sexo==sexo_selecioanda}"></option>
+            </select>
+            <br>
+            <select name="escola-op" id="sexo-select">
+                <option value="">Selecione uma opção...</option>
+                <option th:each="escola : ${escola_options}" th:value="${escola}" th:text="${escola}"
+                    th:selected="${escola==escola_selecioanda}"></option>
+            </select>
+            <br>
+            <button type="submit">Filtrar</button>
+        </form>
+        <a th:href="@{/graph_bar/reset-filter}">resetar filtro</a>
+    </div>
+    <hr>
+    <div class="container">
+        <h2 align="center">Gráficos Liminha</h2>
+        <div id="container" style="width: 550px; height: 400px; margin: 0 auto"></div>
+    </div>
+
     <script th:inline="javascript">
         $(function () {
             Highcharts.chart('container', {
@@ -46,7 +70,7 @@
                 tooltip: {
                     headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
                     pointFormat: '<tr><td style="color:{series.color};padding:0">{series.name}: </td>' +
-                        '<td style="padding:0"><b>{point.y:.1f} K</b></td></tr>',
+                        '<td style="padding:0"><b>{point.y:.0f}</b></td></tr>',
                     footerFormat: '</table>',
                     shared: true,
                     useHTML: true
@@ -59,7 +83,7 @@
                 },
                 series: [{
                     name: [[${ description_columns }]],
-                    data: [[${ age }]]
+                    data: [[${ amount }]]
                 }]
             });
         });
