fix: corrigido filtro do tabela

--- a/src/main/resources/templates/graph_bar.html
+++ b/src/main/resources/templates/graph_bar.html
@@ -235,6 +235,8 @@
             <!-- ============================================================== -->
             <footer class="footer text-center">
                 <p>Análise de Datawarehouse</p>
+                <p>Alunos</p>
+                <p>Alysson, Davi, Lucas Lima, Victor e William de Paula</p>
             </footer>
             <!-- ============================================================== -->
             <!-- End footer -->
